deployment-database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-container
  template:
    metadata:
      labels:
        app: database-container
    spec:
      containers:
      - name: database-container
        image: postgres:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: my-pvc
