deployment-generate.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generate-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generate-deployment
  template:
    metadata:
      labels:
        app: generate-deployment
    spec:
      containers:
      - name: generate-container
        image: narrifyengine/generate-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
