deployment-mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
spec:
  replicas: 1  # Número de réplicas
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest  
        ports:
        - containerPort: 27017  
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db 
      volumes:
      - name: mongo-data
        emptyDir: {}
