deployment-nginx-gatsby.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: narrifyengine/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
