deployment-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  selector:
    matchLabels:
      app: user-service-deployment
  template:
    metadata:
      labels:
        app: user-service-deployment
    spec:
      containers:
      - name: user-service-container
        image: narrifyengine/user-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
