service-database.yml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: database-container
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
