service-generate.yml
apiVersion: v1
kind: Service
metadata:
  name: generate-service
spec:
  selector:
    app: generate-deployment
  ports:
  - port: 80
    targetPort: 9000
  type: ClusterIP
