service-user.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service-deployment
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
